Remove useless remark